# NitroCppTest-MuhammadSharif

./: .gitignore  CMakeLists.txt  README.md  setup.sh
inc/JsonParser/: JsonParser.h  RectangleJsonParser.h
inc/Rectangle/: Rectangle.h
inc/Shape/: Rectangle.h
inc/ShapeData/: RectangleData.h
src/: Rectangle.cpp  RectangleJsonParser.cpp  main.cpp
test/: CMakeLists.txt  RectangleJsonParserTest.cpp  RectangleTest.cpp
